[package]
name = "stylus-hello-world"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "0.8.2"
alloy-sol-types = "0.8.2"
mini-alloc = "0.6.0"
stylus-sdk = "0.6.0"

hex = "0.4.3"
dotenv = "0.15.0"
sha3 = "0.10"

# heavy random generating number dependencies
# rand = "0.8"
# getrandom = { version = "0.2", features = ["js"] }
[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
ethers = "2.0.14"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]


[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
